Update title slide.

--- a/pres.less
+++ b/pres.less
@@ -59,6 +59,22 @@
     text-transform: none;
   }
 
+  h1 {
+    font-size: 4em;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  #title h2 {
+    padding: 0 20vw;
+  }
+
+  #title h3 {
+    margin-top: 1em;
+  }
+
   code {
     font-family: Inconsolata, monospace;
   }
